test/cases/compile_errors/deref_on_undefined_value.zig
comptime {
    const a: *u8 = undefined;
    _ = a.*;
}

// error
//
// :3:10: error: cannot dereference undefined value
